app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require foundation_and_overrides

 */

/*-- ALL --*/
.content {
  min-height: calc(100vh - 110px);
}
.footer {
  height: 50px;
}

body {
  width: 75%;
  margin: 1rem auto;
}

header nav {
  text-align: center;
  border-bottom: 1px rgb(185, 185, 185) solid;
  height: 6rem;
  margin-bottom: 1rem;
}

header nav a {
  font-size: 5rem;
}

footer {
  margin-top: auto;
  text-align: center;
  font-size: .75em;
  padding: 1em;
}

a {
  color: rgb(80, 80, 80);
}

.center-this {
  text-align: center;
}

img {
  height: 12rem;
  width: auto;
}

/*-- INDEX --*/
.search-form {
  width: 70%;
  margin: 0 auto;
}

.past-searches {
  margin: 3rem;
}

.button {
  background-color: rgb(71, 173, 58);
}

/*-- SEARCH RESULTS --*/
.results {
  width: 70%;
  margin: 0 auto;
}

.row div {
  margin: 1rem 0;
}

.text {
  font-size: 1.1rem;
}

/*.recipe-result {
  margin: 2rem auto;
}

.recipe-result a {
  vertical-align: middle;
  margin: 0 auto;
}

.text-box {
  width: 70%;
  margin: 0 auto;
}

.text-box a {
  font-size: 1.1rem;
}*/

.no-results {
  margin: 3rem;
  color: rgb(172, 67, 67);
  font-size: 2rem;
}

/*-- SHOW --*/
.bigger-image img {
  height: 20rem;
  width: auto;
}

.recipe-details {
  padding: 5rem;
}

/*-- MEDIA QUERIES --*/
@media only screen and (min-width: 64.5em) {
  .text {
    padding-top: 5rem;
  }
}

@media only screen and (max-width: 64.5em) {
  .text {
    padding-top: 1.5rem;
  }
}

